--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "title":"maRiWagiMin",
-  "version":"2.11",
+  "version":"2.1",
   "is_active":true,
-  "changelog":""
+  "changelog":"Update maRiwagiMin Style"
 }
