--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "title":"maRiWagiMin",
   "version":"2.1",
   "is_active":true,
-  "changelog":"Update maRiwagiMin Style"
+  "changelog":"<ul><li>v2.1<ul><li>Update maRiwagiMin Style 1.0</li><li>Update upload random date</li><li>Compressing files</li></ul></li></ul>"
 }
