--- a/config.json
+++ b/config.json
@@ -2,5 +2,14 @@
   "title":"maRiWagiMin",
   "version":"2.1",
   "is_active":true,
-  "changelog":"<ul><li>v2.1<ul><li>Update maRiwagiMin Style 1.0</li><li>Update upload random date</li><li>Compressing files</li></ul></li></ul>"
+  "changelog":"
+        <ul>
+            <li style="color:#f55858;">v2.1
+              <ul>
+                <li color:#c44646;>Update maRiwagiMin Style 1.0</li>
+                <li color:#c44646;>Update upload random date</li>
+                <li color:#c44646;>Compressing files</li>
+              </ul>
+            </li>
+         </ul>"
 }
