--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
   "title":"maRiWagiMin",
   "version":"2.1",
   "is_active":true,
-  "changelog":"<br><b>v2.1<br>- Update maRiwagiMin Style 1.0<br>- Update upload random date<br>- Compressing files<br><br>"
+  "changelog":"<br><br><b>v2.1</b><br>- Update maRiwagiMin Style 1.0<br>- Update upload random date<br>- Compressing files<br><br>"
 }
