--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "title":"maRiWagiMin",
   "version":"2.1",
-  "is_active":false,
+  "is_active":true,
   "changelog":"<br><br>v2.1<br>- Update maRiwagiMin Style 1.0<br>- Update upload random date<br>- Compressing files<br><br>"
 }
